--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-devtools'
+	/*컴파일 오류 발생시 org.springframework.boot:spring-boot-starter-devtools 대신에
+	org.springframework.boot:spring-boot-devtools로 변경*/
+
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc' // @Transaction 사용 시 필요
 
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	//runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -42,3 +47,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+// mysql 의존성 추가
+//	implementation 'mysql:mysql-connector-java'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	implementation 'spring-boot-starter-data-jpa'
