--- a/build.gradle
+++ b/build.gradle
@@ -34,14 +34,21 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 	//runtimeOnly 'com.mysql:mysql-connector-j'
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 	testImplementation 'junit:junit:4.13.1'
 
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
+
+	// mysql 의존성 추가
+	implementation 'mysql:mysql-connector-java'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	implementation 'spring-boot-starter-data-jpa'
+
+
 
 	/*// Retrofit 의존성 추가
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -51,7 +58,3 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-// mysql 의존성 추가
-//	implementation 'mysql:mysql-connector-java'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'spring-boot-starter-data-jpa'
