--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,27 +4,38 @@
 #spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/extends
-# DB ??
-spring.datasource.username=sa
-# ????
-spring.datasource.password=1234
-# ????
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/extends
+## DB \uC704\uCE58
+#spring.datasource.username=sa
+## \uC0AC\uC6A9\uC790\uBA85
+#spring.datasource.password=1234
+## \uD328\uC2A4\uC6CC\uB4DC
+#spring.datasource.driver-class-name=org.h2.Driver
 
-spring.jpa.hibernate.ddl-auto =create
-#?? ????? ???? ?? ? ???
+
+spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#spring.jpa.hibernate.ddl-auto=create
+# \uC2E4\uD589 \uC2DC\uD0AC\uB54C\uB9C8\uB2E4 \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C \uD6C4 \uC0DD\uC131\uD568
+spring.jpa.hibernate.ddl-auto=update
+#\uC2E4\uD589 \uC2DC\uD0AC\uB54C\uB9C8\uB2E4 \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C \uD6C4 \uC0DD\uC131\uD568\uC774 \uC544\uB2CC \uAE30\uC874 \uD14C\uC774\uBE14\uC5D0\uC11C \uC5C5\uB370\uC774\uD2B8 \uD568 \uC544\uB9C8\uB3C4
+
+
 spring.jpa.properties.hibernate.format_sql=true
-# ??? sql ??? ??
+# \uCF58\uC194\uC5D0 sql \uCFFC\uB9AC\uBB38 \uCD9C\uB825
 
 logging.level.org.hibernate.SQL=debug 
-# JPA? ??????? ??? ??? ? ??? ? # log? ??
+# JPA\uC640 \uD558\uC774\uBC84\uB124\uC774\uD2B8\uAC00 \uC0DD\uC131\uD55C \uCFFC\uB9AC\uAC00 \uB2E4 \uBCF4\uC774\uAC8C \uD568 # log\uB97C \uD1B5\uD574
 
 #logging.level.org.hibernate.type=trace
-# ??? ?? 2.x, hibernate5
+# \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.x, hibernate5
 
 org.hibernate.orm.jdbc.bind=trace
-# ??? ?? 3.x, hibernate6
+# \uC2A4\uD504\uB9C1 \uBD80\uD2B8 3.x, hibernate6
 
 #spring:
 #  datasource:
@@ -48,4 +59,4 @@ org.hibernate.orm.jdbc.bind=trace
 #
 #logging:
 #  level:
-#    org.hibernate.SQL: DEBUG
+#    org.hibernate.SQL: debug
