--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,17 @@
 ## \uD328\uC2A4\uC6CC\uB4DC
 #spring.datasource.driver-class-name=org.h2.Driver
 
+#?? setting
+#spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#?? setting
 spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=357869421
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 
 #spring.jpa.hibernate.ddl-auto=create
 # \uC2E4\uD589 \uC2DC\uD0AC\uB54C\uB9C8\uB2E4 \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C \uD6C4 \uC0DD\uC131\uD568
