--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-devtools'
+	implementation 'org.springframework.boot:spring-boot-devtools'
+//    implementation 'org.springframework.boot:spring-boot-starter-devtools'
 	/*컴파일 오류 발생시 org.springframework.boot:spring-boot-starter-devtools 대신에
 	org.springframework.boot:spring-boot-devtools로 변경*/
 
@@ -33,8 +34,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc' // @Transaction 사용 시 필요
 
 	compileOnly 'org.projectlombok:lombok'
-	//runtimeOnly 'com.mysql:mysql-connector-j'
-	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+//	implementation 'mysql:mysql-connector-java' // 이건 스프링3으로 넘어오면서 오류남
+//	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
