--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,48 +4,45 @@
 #spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/extends
-# DB ??
-spring.datasource.username=sa
-# ????
-spring.datasource.password=1234
-# ????
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/extends
+## DB ??
+#spring.datasource.username=sa
+## ????
+#spring.datasource.password=1234
+## ????
+#spring.datasource.driver-class-name=org.h2.Driver
+#
+#spring.jpa.hibernate.ddl-auto =create
+##?? ????? ???? ?? ? ???
+#spring.jpa.properties.hibernate.format_sql=true
+## ??? sql ??? ??
+#
+#logging.level.org.hibernate.SQL=debug
+## JPA? ??????? ??? ??? ? ??? ? # log? ??
+#
+##logging.level.org.hibernate.type=trace
+## ??? ?? 2.x, hibernate5
+#
+#org.hibernate.orm.jdbc.bind=trace
+## ??? ?? 3.x, hibernate6
+#############################################################################################################################3
+# MySQL ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto =create
-#?? ????? ???? ?? ? ???
+# DB Source URL
+spring.datasource.url=jdbc:mysql://localhost:3306/extends?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+
+# DB username
+spring.datasource.username=root
+
+# DB password
+spring.datasource.password=root1234
+
+# true ??? JPA ??? ?? ??
+spring.jpa.show-sql=true
+
+# DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
+spring.jpa.hibernate.ddl-auto=create
+
+# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
-# ??? sql ??? ??
-
-logging.level.org.hibernate.SQL=debug 
-# JPA? ??????? ??? ??? ? ??? ? # log? ??
-
-#logging.level.org.hibernate.type=trace
-# ??? ?? 2.x, hibernate5
-
-org.hibernate.orm.jdbc.bind=trace
-# ??? ?? 3.x, hibernate6
-
-#spring:
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:8080/extends?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-#    username: root
-#    password: root
-#
-#
-#  jpa:
-#    open-in-view: true
-#    hibernate:
-#      ddl-auto: create
-#      naming:
-#        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#      use-new-id-generator-mappings: false
-#    show-sql: true
-#    properties:
-#      hibernate.format_sql: true
-#      dialect: org.hibernate.dialect.MySQL8InnoDBDialect
-#
-#logging:
-#  level:
-#    org.hibernate.SQL: DEBUG
