front 정적코드, mysql 로 안정화작업, Controller안정화 후 추가할예정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.jpa.hibernate.ddl-auto=create
 # \uC2E4\uD589 \uC2DC\uD0AC\uB54C\uB9C8\uB2E4 \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C \uD6C4 \uC0DD\uC131\uD568
+
+spring.jpa.show-sql=true
+#\uBB54\uC9C0 \uBAA8\uB984
 spring.jpa.hibernate.ddl-auto=update
 #\uC2E4\uD589 \uC2DC\uD0AC\uB54C\uB9C8\uB2E4 \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C \uD6C4 \uC0DD\uC131\uD568\uC774 \uC544\uB2CC \uAE30\uC874 \uD14C\uC774\uBE14\uC5D0\uC11C \uC5C5\uB370\uC774\uD2B8 \uD568 \uC544\uB9C8\uB3C4
 
