--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 
 	// mysql 의존성 추가
 	implementation 'mysql:mysql-connector-java'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.mysql:mysql-connector-j' // 이건 스프링3으로 넘어오면서 오류난다고 유리 코드에 적혀있긴 함
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'spring-boot-starter-data-jpa'
 
