--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,32 +18,63 @@
 #spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#?? setting
-spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=357869421
+
+#################################################### ??? ?? ##################################################################
+# port ??
+#server.port = 8081
+
+# MySQL ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.jpa.hibernate.ddl-auto=create
-# \uC2E4\uD589 \uC2DC\uD0AC\uB54C\uB9C8\uB2E4 \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C \uD6C4 \uC0DD\uC131\uD568
+# DB Source URL
+spring.datasource.url=jdbc:mysql://localhost:3306/extends?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 
+# DB username
+spring.datasource.username=root
+
+# DB password
+spring.datasource.password=root1234
+
+# true ??? JPA ??? ?? ??
 spring.jpa.show-sql=true
-#\uBB54\uC9C0 \uBAA8\uB984
-spring.jpa.hibernate.ddl-auto=update
-#\uC2E4\uD589 \uC2DC\uD0AC\uB54C\uB9C8\uB2E4 \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C \uD6C4 \uC0DD\uC131\uD568\uC774 \uC544\uB2CC \uAE30\uC874 \uD14C\uC774\uBE14\uC5D0\uC11C \uC5C5\uB370\uC774\uD2B8 \uD568 \uC544\uB9C8\uB3C4
 
+# DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
+spring.jpa.hibernate.ddl-auto=create
 
+# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
-# \uCF58\uC194\uC5D0 sql \uCFFC\uB9AC\uBB38 \uCD9C\uB825
+#################################################### END ##################################################################
 
-logging.level.org.hibernate.SQL=debug 
-# JPA\uC640 \uD558\uC774\uBC84\uB124\uC774\uD2B8\uAC00 \uC0DD\uC131\uD55C \uCFFC\uB9AC\uAC00 \uB2E4 \uBCF4\uC774\uAC8C \uD568 # log\uB97C \uD1B5\uD574
 
-#logging.level.org.hibernate.type=trace
-# \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.x, hibernate5
+#################################################### ?? RestTest? ?? ??? ##################################################################
+##?? setting
+#spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=357869421
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+##spring.jpa.hibernate.ddl-auto=create
+## \uC2E4\uD589 \uC2DC\uD0AC\uB54C\uB9C8\uB2E4 \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C \uD6C4 \uC0DD\uC131\uD568
+#
+#spring.jpa.show-sql=true
+##\uBB54\uC9C0 \uBAA8\uB984
+#spring.jpa.hibernate.ddl-auto=update
+##\uC2E4\uD589 \uC2DC\uD0AC\uB54C\uB9C8\uB2E4 \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C \uD6C4 \uC0DD\uC131\uD568\uC774 \uC544\uB2CC \uAE30\uC874 \uD14C\uC774\uBE14\uC5D0\uC11C \uC5C5\uB370\uC774\uD2B8 \uD568 \uC544\uB9C8\uB3C4
+#
+#
+#spring.jpa.properties.hibernate.format_sql=true
+## \uCF58\uC194\uC5D0 sql \uCFFC\uB9AC\uBB38 \uCD9C\uB825
+#
+#logging.level.org.hibernate.SQL=debug
+## JPA\uC640 \uD558\uC774\uBC84\uB124\uC774\uD2B8\uAC00 \uC0DD\uC131\uD55C \uCFFC\uB9AC\uAC00 \uB2E4 \uBCF4\uC774\uAC8C \uD568 # log\uB97C \uD1B5\uD574
+#
+##logging.level.org.hibernate.type=trace
+## \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.x, hibernate5
+#
+#org.hibernate.orm.jdbc.bind=trace
+## \uC2A4\uD504\uB9C1 \uBD80\uD2B8 3.x, hibernate6
 
-org.hibernate.orm.jdbc.bind=trace
-# \uC2A4\uD504\uB9C1 \uBD80\uD2B8 3.x, hibernate6
+#################################################### END ##################################################################
 
 #spring:
 #  datasource:
