--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,8 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
 	// mysql 의존성 추가
-	implementation 'mysql:mysql-connector-java'
-	runtimeOnly 'com.mysql:mysql-connector-j' // 이건 스프링3으로 넘어오면서 오류난다고 유리 코드에 적혀있긴 함
+//	implementation 'mysql:mysql-connector-java' // 이건 스프링3으로 넘어오면서 오류난다고 유리 코드에 적혀있긴 함
+	runtimeOnly 'com.mysql:mysql-connector-j'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'spring-boot-starter-data-jpa'
 
