--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,17 @@
 ## \uD328\uC2A4\uC6CC\uB4DC
 #spring.datasource.driver-class-name=org.h2.Driver
 
-#?? setting
+##hwan setting
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 #spring.datasource.username=root
 #spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+##JY setting
+#spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=357869421
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #################################################### ??? ?? ##################################################################
 # port ??
@@ -40,6 +45,7 @@ spring.jpa.show-sql=true
 
 # DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
 spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
