--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@
 ## \uD328\uC2A4\uC6CC\uB4DC
 #spring.datasource.driver-class-name=org.h2.Driver
 
-##hwan setting
-#spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#hwan setting
+spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##JY setting
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -28,17 +28,17 @@
 # port ??
 #server.port = 8081
 
-# MySQL ??
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/extends?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-
-# DB username
-spring.datasource.username=root
-
-# DB password
-spring.datasource.password=root1234
+## MySQL ??
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## DB Source URL
+#spring.datasource.url=jdbc:mysql://localhost:3306/extends?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+#
+## DB username
+#spring.datasource.username=root
+#
+## DB password
+#spring.datasource.password=root1234
 
 # true ??? JPA ??? ?? ??
 spring.jpa.show-sql=true
