--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+#\uD0C0\uC784\uB9AC\uD504 \uAD00\uB828 \uC124\uC815 \uD639\uC2DC\uB098 \uC5D0\uB7EC\uC0DD\uAE38\uC2DC \uC5EC\uAE30\uBD80\uD130 \uD655\uC778\uD574\uC57C\uD568
+# Thymeleaf \uD15C\uD50C\uB9BF \uCE90\uC2DC \uC0AC\uC6A9\uD558\uC9C0 \uC54A\uB3C4\uB85D \uC124\uC815
+spring.thymeleaf.cache=false
+# Thymeleaf\uC5D0\uC11C \uC0AC\uC6A9\uD558\uB294 \uAE30\uBCF8 prefix\uC640 suffix \uBCC0\uACBD
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+# JSON \uC751\uB2F5\uC744 \uC0DD\uC131\uD558\uB294 \uACBD\uC6B0 \uBDF0 \uB9AC\uC878\uBC84\uB97C \uC0AC\uC6A9\uD558\uC9C0 \uC54A\uB3C4\uB85D \uC124\uC815
+spring.mvc.view.prefix=
+spring.mvc.view.suffix=
+# \uD14C\uC2A4\uD2B8 \uD6C4 \uC7AC\uD655\uC778 \uD544\uC694
+
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?autoReconnect=true
 #spring.datasource.username=root
