--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,8 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'spring-boot-starter-data-jpa'
 
-
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5' // 사용 가능한 최신 버전 사용
+	// Jackson 라이브러리
 
 	/*// Retrofit 의존성 추가
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
