--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,10 +24,10 @@ spring.mvc.view.suffix=
 #spring.datasource.driver-class-name=org.h2.Driver
 
 #hwan setting
-#spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##JY setting
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -39,15 +39,15 @@ spring.mvc.view.suffix=
 # port ??
 #server.port = 8081
 
-## yul setting
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-## DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/extends?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-## DB username
-spring.datasource.username=root
-## DB password
-spring.datasource.password=root
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+### yul setting
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+### DB Source URL
+#spring.datasource.url=jdbc:mysql://localhost:3306/extends?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+### DB username
+#spring.datasource.username=root
+### DB password
+#spring.datasource.password=root
+##spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 
 
 
