변경사항 일부 커밋

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.mvc.view.prefix=
 spring.mvc.view.suffix=
 # \uD14C\uC2A4\uD2B8 \uD6C4 \uC7AC\uD655\uC778 \uD544\uC694
 
+# server.port=8088
+# ?? ???? ??
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?autoReconnect=true
 #spring.datasource.username=root
