--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,10 @@ spring.mvc.view.suffix=
 ## \uD328\uC2A4\uC6CC\uB4DC
 #spring.datasource.driver-class-name=org.h2.Driver
 
+# file size
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
+
 #hwan setting
 spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
