--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.mvc.view.suffix=
 # server.port=8088
 # ?? ???? ??
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?autoReconnect=true
 #spring.datasource.username=root
 #spring.datasource.password=1234
@@ -28,12 +30,15 @@ spring.mvc.view.suffix=
 # file size
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
+file.dir=D:/JAVA_Workspace/TeamProject-Web_RestApi/src/main/resources/files
+#file.path=classpath:files/
 
-#hwan setting
-spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+##hwan setting
+#spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##JY setting
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -45,15 +50,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # port ??
 #server.port = 8081
 
-### yul setting
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-### DB Source URL
-#spring.datasource.url=jdbc:mysql://localhost:3306/extends?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-### DB username
-#spring.datasource.username=root
-### DB password
-#spring.datasource.password=root
-##spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+## yul setting
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+## DB Source URL
+spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+## DB username
+spring.datasource.username=root
+## DB password
+spring.datasource.password=root
 
 
 
