File class/repository/service 삭제 -> Board 클래스로 이동 FileService -> FileUtil로 변경 FileRestController 메소드 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # file size
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
-file.dir=D:/JAVA_Workspace/TeamProject-Web_RestApi/src/main/resources/files
+file.dir=D:/JAVA_Workspace/images
 #file.path=classpath:files/
 
 
