- 이미지 업로드/다운로드 작업 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,11 +27,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 ## \uD328\uC2A4\uC6CC\uB4DC
 #spring.datasource.driver-class-name=org.h2.Driver
 
-# file size
-spring.servlet.multipart.max-file-size=1MB
+# fileEntity size
+spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-file.dir=D:/JAVA_Workspace/images
-#file.path=classpath:files/
+file.dir=C:/Users/JY/Documents/ExtendRAWFiles
+#fileEntity.path=classpath:files/
 
 
 ##hwan setting
@@ -41,23 +41,24 @@ file.dir=D:/JAVA_Workspace/images
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##JY setting
-#spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=357869421
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ExtendDB?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=357869421
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #################################################### ??? ?? ##################################################################
 # port ??
 #server.port = 8081
 
-## yul setting
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-## DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-## DB username
-spring.datasource.username=root
-## DB password
-spring.datasource.password=root
+### yul setting
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+### DB Source URL
+#spring.datasource.url=jdbc:mysql://localhost:3306/extends?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+### DB username
+#spring.datasource.username=root
+### DB password
+#spring.datasource.password=root
+##spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 
 
 
@@ -65,7 +66,7 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 
 # DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=update
 
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
