--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,13 @@ spring.mvc.view.prefix=
 spring.mvc.view.suffix=
 # \uD14C\uC2A4\uD2B8 \uD6C4 \uC7AC\uD655\uC778 \uD544\uC694
 
+server.servlet.session.tracking-modes=cookie
+#\uC774 \uC124\uC815\uC740 \uC138\uC158\uC744 \uCFE0\uD0A4 \uAE30\uBC18\uC73C\uB85C \uAD00\uB9AC\uD558\uB3C4\uB85D \uC9C0\uC815\uD558\uB294 \uAC83\uC785\uB2C8\uB2E4.
+#\uB530\uB77C\uC11C \uC11C\uBC84\uC640 \uD074\uB77C\uC774\uC5B8\uD2B8 \uAC04\uC758 \uC694\uCCAD \uBC0F \uC751\uB2F5\uC5D0\uC11C JSESSIONID \uCFE0\uD0A4\uAC00 \uC0AC\uC6A9\uB418\uC5B4 \uC138\uC158\uC744 \uAD00\uB9AC\uD558\uAC8C \uB429\uB2C8\uB2E4.
+
 # server.port=8088
 # ?? ???? ??
-
+logging.level.org.springframework.web=DEBUG
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?autoReconnect=true
@@ -34,17 +38,17 @@ file.dir=C:/Users/JY/Documents/ExtendRAWFiles
 #fileEntity.path=classpath:files/
 
 
-##hwan setting
-#spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#hwan setting
+spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##JY setting
-spring.datasource.url=jdbc:mysql://localhost:3306/ExtendDB?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=357869421
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=357869421
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #################################################### ??? ?? ##################################################################
 # port ??
@@ -67,7 +71,7 @@ spring.jpa.show-sql=true
 
 # DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
