- 학과특화게시판 구현을 위한 엔드포인트 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,17 +38,17 @@ file.dir=C:/Users/JY/Documents/ExtendRAWFiles
 #fileEntity.path=classpath:files/
 
 
-#hwan setting
-spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-##JY setting
+##hwan setting
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 #spring.datasource.username=root
-#spring.datasource.password=357869421
+#spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#JY setting
+spring.datasource.url=jdbc:mysql://localhost:3306/extenddb?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=357869421
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #################################################### ??? ?? ##################################################################
 # port ??
