--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # fileEntity size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-file.dir=C:/Users/JY/Documents/ExtendRAWFiles
+#file.dir=C:/Users/JY/Documents/ExtendRAWFiles
 #fileEntity.path=classpath:files/
-
+## yuri
+file.dir=D:/JAVA_Workspace/images/
 
 ##hwan setting
 #spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -45,24 +46,23 @@ file.dir=C:/Users/JY/Documents/ExtendRAWFiles
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JY setting
-spring.datasource.url=jdbc:mysql://localhost:3306/extenddb?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=357869421
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/extenddb?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=357869421
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #################################################### ??? ?? ##################################################################
 # port ??
-#server.port = 8081
+server.port = 8081
 
-### yul setting
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-### DB Source URL
-#spring.datasource.url=jdbc:mysql://localhost:3306/extends?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-### DB username
-#spring.datasource.username=root
-### DB password
-#spring.datasource.password=root
-##spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+## yul setting
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+## DB Source URL
+spring.datasource.url=jdbc:mysql://localhost:3306/2023test?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+## DB username
+spring.datasource.username=root
+## DB password
+spring.datasource.password=root
 
 
 
